...
  Widget build(BuildContext context) {
    return Scaffold(
      backgroundColor: AppColors.scaffoldBackgroundColor,
      appBar: AppBar(
        automaticallyImplyLeading: false,
        title: const Text(
          "Live Broadcast",
          style: TextStyle(
            fontWeight: FontWeight.bold,
            letterSpacing: 0.5,
            color: AppColors.darkColor,
          ),
        ),
...
                size: 64,
                color: AppColors.themeColor,
              ),
            ),
            const SizedBox(height: 24),
            const Text(
              "Live Broadcast Offline",
              style: TextStyle(
                fontSize: 22,
                fontWeight: FontWeight.bold,
                color: AppColors.earthColor,
              ),
            ),
...
